--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Simple Todo App",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js"
+    "start": "nodemon app.js"
   },
   "author": "",
   "license": "ISC",
@@ -12,12 +12,13 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.2",
     "connect-flash": "^0.1.1",
+    "dotenv": "^16.3.1",
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
     "express-session": "^1.15.6",
     "method-override": "^2.3.10",
     "mongoose": "^5.0.14",
-    "nodemon": "^2.0.20",
+    "nodemon": "^3.0.1",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0"
   }
